--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
-<!doctype html>
-<html>
-
-<head>
-  <title>Sample App</title>
-  <link rel='stylesheet' href='./static/app.css'>
-  <link rel="stylesheet" href="https://unpkg.com/antd@2.7.1/dist/antd.min.css">
-</head>
-
-<body>
-  <div id='root' style="height: 100%">
-  </div>
-  <script src="./static/bundle.js"></script>
-</body>
-
+<!DOCTYPE html>
+<html manifest="appcache/manifest.appcache">
+  <head>
+    <meta charset="UTF-8">
+    <title>Webpack App</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/antd/2.7.2/antd.css" />
+  <link href="/dist/app.css" rel="stylesheet"></head>
+  <body>
+    <div><div id="root"></div></div>
+  </body>
+  <script type="text/javascript" src="/dist/bundle.js"></script>
 </html>
