--- a/index.html
+++ b/index.html
@@ -2,8 +2,15 @@
 <html manifest="appcache/manifest.appcache">
   <head>
     <meta charset="UTF-8">
-    <title>Webpack App</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/antd/2.7.2/antd.css" />
+    <title>My Words</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/antd/2.7.2/antd.min.css" />
+    <style>
+    body{
+      background-color: rgba(255, 107, 107, 1) !important;
+    }
+    </style>
+  </head>
   <body>
     <div><div id="root"></div></div></body></script>
 </html>
