no javascript message

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     </style>
   </head>
   <body>
+    <noscript>I would like to show you something, but we need Javascript!</noscript>
     <div><div id="root"></div></div></body></script>
 </html>
