--- a/index.html
+++ b/index.html
@@ -13,12 +13,7 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ff6b6b">
     <meta name="theme-color" content="#fadada">
     <link rel="manifest" href="./manifest.webmanifest">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/antd/2.7.2/antd.min.css" />
-    <style>
-    body{
-      background-color: rgba(255, 107, 107, 1) !important;
-    }
-    </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap-grid.min.css" />
   </head>
   <body>
     <noscript>I would like to show you something, but we need Javascript!</noscript>
